added images resources

--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Programmming Hero Paribahan</title>
+    <!-- favicon here  -->
+    <link rel="shortcut icon" href="./images/bus-logo.png" type="image/x-icon">
+        <!-- tailwindcss cdn here  -->
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
     
