--- a/index.html
+++ b/index.html
@@ -6,12 +6,115 @@
     <title>Programmming Hero Paribahan</title>
     <!-- favicon here  -->
     <link rel="shortcut icon" href="./images/bus-logo.png" type="image/x-icon">
+
+    <!-- raleway and inter font from google-font  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
         <!-- tailwindcss cdn here  -->
     <script src="https://cdn.tailwindcss.com"></script>
+
+    <style>
+        .raleway {
+            font-family: 'Raleway', sans-serif;
+        }
+        .inter {
+            font-family: 'Inter', sans-serif;
+        }
+    </style>
+
 </head>
 <body>
-    <header>
+    <header class="">
 
+        <!-- navbar start  -->
+        <nav class="flex justify-around items-center pt-10">
+            <div><h1 class="text-[#030712] raleway text-[36px]  font-extrabold">P-Ticket</h1></div>
+            <ul class="flex items-center text-[#030712B3] text-[18px] raleway font-medium gap-14">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Destination</a></li>
+                <li><a href="#">Search</a></li>
+            </ul>
+            <button class="flex items-center bg-[#1DD1001A] px-7 py-3 text-[#1DD100] raleway text-xl font-semibold border-[1px] border-[#1DD100] rounded-xl gap-2">Bus <img src="./images/bus-icon.png" alt="#"></button>
+        </nav>
+        <!-- navbar end  -->
+
+        <!-- banner section start  -->
+        <section class="">
+            <div class="bg-no-repeat bg-center" style="background-image: url('./images/banner.png');">
+                <h1 class="text-white pt-32 text-center raleway text-[64px] font-extrabold">End-to-End Travel with <br><span class="text-[#1DD100]">P Paribahan</span></h1>
+                <p class="text-white pb-8 text-center inter text-[18px] font-normal">Yes, you can run unit tests and view the results directly within the app. The <br> integrated testing features allow for a streamlined .</p>
+                <div class="flex justify-center">
+                <button class="text-[#030712] px-6 py-4 raleway text-xl font-bold bg-[#1DD100] rounded-xl">Buy Tickets</button>
+                </div>
+                
+                <!-- bonus part of banner section  -->
+                <!-- div-1  -->
+                <div class="flex justify-center pt-[66px] gap-6">
+                    <div class="flex border-b-[3px] border-[#1DD100] py-8 pl-8 pr-14 rounded-3xl bg-white gap-4">
+                        <img src="./images/people.png" alt="#">
+                        <div>
+                            <h1 class="text-[#030712] inter text-[36px] font-bold">500K+</h1>
+                            <p class="text-[#030712] inter text-[18px] font-normal">Registered users</p>
+                        </div>
+                    </div>
+                    <!-- div-2  -->
+                    <div class="flex border-b-[3px] border-[#1DD100] py-8 pl-8 pr-14 rounded-3xl bg-white gap-4">
+                        <img src="./images/ticket-cupon.png" alt="#">
+                        <div>
+                            <h1 class="text-[#030712] inter text-[36px] font-bold">1.7 lacks</h1>
+                            <p class="text-[#030712] inter text-[18px] font-normal">Tickets sold</p>
+                        </div>
+                    </div>
+
+                    <!-- div-3  -->
+                    <div class="flex border-b-[3px] border-[#1DD100] py-8 pl-8 pr-14 rounded-3xl bg-white gap-4">
+                        <img src="./images/stoppage.png" alt="#">
+                        <div>
+                            <h1 class="text-[#030712] inter text-[36px] font-bold">80K+</h1>
+                            <p class="text-[#030712] inter text-[18px] font-normal">Rental partners</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- banner section end  -->
+
+        <!-- best offer section start  -->
+        <h2 class="text-[#030712] text-center text-[40px] font-bold raleway pt-32 pb-12">Best offers for you</h2>
+        <section class="flex justify-center gap-6">
+            <div class="flex justify-center items-center bg-[#FFBF0F] pl-[52px] pr-[52px]  rounded-3xl">
+                <div class="pr-[51px]">
+                    <h1 class="text-[#030712] inter text-[40px] font-black">15% OFF</h1>
+                    <h5 class="text-[#030712] inter text-xl font-semibold">on you next purchase</h5>
+                    <p class="text-[#030712] inter text-[18px] font-medium">use by January 2024</p>
+                </div>
+                <img src="./images/cupon-devider.png" alt="#">
+                <div class="pl-6">
+                    <h2 class="text-[#030712] raleway text-[32px] font-bold">New15</h2>
+                    <p class="text-[#030712] raleway text-xl font-medium">Coupon Code</p>
+                </div>
+            </div>
+
+            <div class="flex justify-center items-center  bg-[#F78C9C] pl-[52px] pr-[38px] rounded-3xl">
+                <div class="pr-11">
+                    <h1 class="text-[#030712] inter text-[40px] font-black">15% OFF</h1>
+                    <h5 class="text-[#030712] inter text-xl font-semibold">on you next purchase</h5>
+                    <p class="text-[#030712] inter text-[18px] font-medium">use by January 2024</p>
+                </div>
+                <img src="./images/cupon-devider.png" alt="#">
+                <div class="pl-5">
+                    <h2 class="text-[#030712] raleway text-[32px] font-bold">New15</h2>
+                    <p class="text-[#030712] raleway text-xl font-medium">Coupon Code</p>
+                </div>
+            </div>
+        </section>
+        <div class="flex justify-center pt-16">
+            <button class="text-[#1DD100] raleway text-xl font-semibold px-6 py-4  rounded-xl border-[1px] border-[#1DD100]">See All Offers</button>
+        </div>
+        <!-- best offer section end  -->
     </header>
     <main>
 
