added greeen line paribahan section and footer section

--- a/index.html
+++ b/index.html
@@ -111,16 +111,161 @@
                 </div>
             </div>
         </section>
-        <div class="flex justify-center pt-16">
+        <div class="flex justify-center pt-16 pb-28">
             <button class="text-[#1DD100] raleway text-xl font-semibold px-6 py-4  rounded-xl border-[1px] border-[#1DD100]">See All Offers</button>
         </div>
         <!-- best offer section end  -->
     </header>
-    <main>
 
+    <main>
+        <!-- Ticket fare section start  -->
+        <section class=" border-t-[2px] border-[#1DD100] rounded-t-[88px] bg-[#F7F8F8]">
+            <h2 class="text-[#030712] pt-32 text-center raleway text-[35px] font-bold">P.H Paribahan</h2>
+            <p class="text-[#030712] text-center inter text-[18px] pt-4 pb-12 font-normal">Yes, you can run unit tests and view the results directly within the app. The integrated <br> testing features allow for a streamlined .</p>
+
+            <section class="flex justify-center mb-6 bg-white mx-36 rounded-3xl">
+                            <!-- div -1 start  -->
+            <div>
+
+            <div class="flex gap-[200px] pt-8">
+                <div class="flex items-center gap-3">
+                    <img src="./images/bus-logo.png" alt="#">
+                    <div>
+                        <h3 class="text-[#030712] raleway text-[32px] font-bold">Greenline Paribahan</h3>
+                        <p class="text-[#030712] inter text-[18px] font-normal">Coach-009-WEB ! AC_Business</p>
+                    </div>
+                </div>
+                <div class="flex gap-1 items-center px-4 my-2 bg-[#1DD1001A] rounded-xl">
+                    <img src="./images/seat-green.png" alt="#">
+                    <p class="text-[#1DD100] inter text-[18px] font-medium">40 Seats left</p>
+                </div>
+            </div>
+            <!-- green line paribahan start  -->
+            <div class="border mt-6 mr-8 border-[black] p-8 bg-[#F7F8F8] rounded-3xl">
+                <div class="flex justify-between pb-6">
+                    <div class="text-[#030712] raleway text-[18px] font-medium">Route</div>
+                    <div class="text-[#030712] raleway text-[18px] font-semibold">Dhaka - Sylhet</div>
+                </div>
+                <hr>
+                <div class="flex justify-between pb-6 pt-6">
+                    <div class="text-[#030712] raleway text-[18px] font-medium">Departure Time</div>
+                    <div class="text-[#030712] raleway text-[18px] font-semibold">9:00 PM</div>
+                </div>
+                <hr>
+                <div class="flex text-[#030712] inter text-base font-medium gap-6 pt-6">
+                    <div class="bg-[#0307120d] py-3 px-4 rounded-xl">Boarding Point-Laxmipur</div>
+                    <div class="bg-[#0307120d] py-3 px-7 rounded-xl">Dropping Point-Bogura</div>
+                    <div class="bg-[#0307120d] py-3 px-10 rounded-xl">Est.Time-11Hour</div>
+                </div>
+            </div>
+
+            </div>
+            <!-- div -1 end  -->
+
+            <!-- div -2 start  -->
+            <img src="./images/info-devider.png" alt="#">
+            <!-- div -2 end   -->
+
+            <!-- div -3 start  -->
+            <div class="flex items-center">
+                <div class="ml-7">
+                    <div class="flex justify-center"><img src="./images/fare.png" alt="#"></div>
+                    <h3 class="text-[#030712] raleway text-[30px] font-bold text-center">550 Taka <br> <span class="text-[#030712] raleway text-[18px] font-medium">Per Seat</span></h3>
+                </div>
+            </div>
+            <!-- div -3 end  -->
+            </section>
+            <!-- ticket fare section end  -->
+
+            <!-- seat booking part start  -->
+            <section class="flex justify-between bg-white">
+                <div>
+                    <h5 class="text-[#030712] raleway text-2xl font-semibold">Select Your Seat</h5>
+                    <hr>
+                    <div class="flex inter text-[18px] font-medium">
+                        <div class="flex"><img src="./images/seat-gray.png" alt="#"><p class="text-gray-500">Available</p></div>
+                        <div class="flex"><img src="./images/seat-green-filled.png" alt="#"><p>Selected</p></div>
+                    </div>
+                    <hr>
+                    <div class="flex gap-16">
+                        <div class="grid grid-cols-2 rounded-xl gap-y-6 gap-x-8">
+                            <div class="bg-[#F7F8F8] py-3 px-12 rounded-xl">1</div>
+                            <div class="bg-[#F7F8F8] py-3 px-12 rounded-xl">2</div>
+                            <div class="bg-[#F7F8F8] py-3 px-12 rounded-xl">3</div>
+                            <div class="bg-[#F7F8F8] py-3 px-12 rounded-xl">4</div>
+                            <div class="bg-[#F7F8F8] py-3 px-12 rounded-xl">5</div>
+                            <div class="bg-[#F7F8F8] py-3 px-12 rounded-xl">6</div>
+                            <div class="bg-[#F7F8F8] py-3 px-12 rounded-xl">7</div>
+                            <div class="bg-[#F7F8F8] py-3 px-12 rounded-xl">8</div>
+                            <div class="bg-[#F7F8F8] py-3 px-12 rounded-xl">9</div>
+                            <div class="bg-[#F7F8F8] py-3 px-12 rounded-xl">10</div>
+                            <div class="bg-[#F7F8F8] py-3 px-12 rounded-xl">11</div>
+                            <div class="bg-[#F7F8F8] py-3 px-12 rounded-xl">12</div>
+                            <div class="bg-[#F7F8F8] py-3 px-12 rounded-xl">13</div>
+                            <div class="bg-[#F7F8F8] py-3 px-12 rounded-xl">14</div>
+                            <div class="bg-[#F7F8F8] py-3 px-12 rounded-xl">15</div>
+                            <div class="bg-[#F7F8F8] py-3 px-12 rounded-xl">16</div>
+                            <div class="bg-[#F7F8F8] py-3 px-12 rounded-xl">17</div>
+                            <div class="bg-[#F7F8F8] py-3 px-12 rounded-xl">18</div>
+                            <div class="bg-[#F7F8F8] py-3 px-12 rounded-xl">19</div>
+                            <div class="bg-[#F7F8F8] py-3 px-12 rounded-xl">20</div>    
+                        </div>
+
+                        <div class="grid grid-cols-2 gap-x-8 gap-y-6">
+                            <div class="bg-[#F7F8F8] py-3 px-12 rounded-xl">21</div>
+                            <div class="bg-[#F7F8F8] py-3 px-12 rounded-xl">22</div>
+                            <div class="bg-[#F7F8F8] py-3 px-12 rounded-xl">23</div>
+                            <div class="bg-[#F7F8F8] py-3 px-12 rounded-xl">24</div>
+                            <div class="bg-[#F7F8F8] py-3 px-12 rounded-xl">25</div>
+                            <div class="bg-[#F7F8F8] py-3 px-12 rounded-xl">26</div>
+                            <div class="bg-[#F7F8F8] py-3 px-12 rounded-xl">27</div>
+                            <div class="bg-[#F7F8F8] py-3 px-12 rounded-xl">28</div>
+                            <div class="bg-[#F7F8F8] py-3 px-12 rounded-xl">29</div>
+                            <div class="bg-[#F7F8F8] py-3 px-12 rounded-xl">30</div>
+                            <div class="bg-[#F7F8F8] py-3 px-12 rounded-xl">31</div>
+                            <div class="bg-[#F7F8F8] py-3 px-12 rounded-xl">32</div>
+                            <div class="bg-[#F7F8F8] py-3 px-12 rounded-xl">33</div>
+                            <div class="bg-[#F7F8F8] py-3 px-12 rounded-xl">34</div>
+                            <div class="bg-[#F7F8F8] py-3 px-12 rounded-xl">35</div>
+                            <div class="bg-[#F7F8F8] py-3 px-12 rounded-xl">36</div>
+                            <div class="bg-[#F7F8F8] py-3 px-12 rounded-xl">37</div>
+                            <div class="bg-[#F7F8F8] py-3 px-12 rounded-xl">38</div>
+                            <div class="bg-[#F7F8F8] py-3 px-12 rounded-xl">39</div>
+                            <div class="bg-[#F7F8F8] py-3 px-12 rounded-xl">40</div>    
+                        </div>
+                    </div>
+                </div>
+
+                <hr> 
+
+                <div>
+                    <h5 class="text-[#030712] raleway text-2xl font-semibold">Select Your Seat</h5>
+                    <hr>
+                </div>
+            </section>
+        </section>
     </main>
-    <footer>
-        
+
+    <footer class="bg-[#030712] pt-28">
+        <div class="flex justify-center gap-[600px] pb-12">
+            <div>
+                <h2 class="text-white raleway text-[36px] font-semibold">P-Ticket</h2>
+                <p class="text-gray-300 inter text-[18px] font-normal">P-Ticket is a digital platform to make your <br> daily commuting better.</p>
+            </div>
+            <div>
+                <h4 class="text-white raleway text-xl font-semibold pb-5">Download our app</h4>
+                <img src="./images/google-play.png" alt="#">
+            </div>
+        </div>
+        <hr>
+        <div class="flex justify-around pt-8 pb-28">
+            <p class="text-gray-400 text-base inter font-normal">@all rights reserved, P-Ticket services limited.2024</p>
+            <div class="flex gap-8 text-white inter text-base font-medium">
+                <p><a href="#">Terms and condition</a></p>
+                <p><a href="#">Return and refund policy</a></p>
+                <p><a href="#">Privacy Policy</a></p>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
