added seat selecting funcitionality

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                     <hr>
                     <div class="flex justify-between inter text-[18px] font-medium pt-5 pb-5">
                         <div class="flex"><img src="./images/seat-gray.png" alt="#"><p class="text-gray-500">Available</p></div>
-                        <div class="flex"><img src="./images/seat-green-filled.png" alt="#"><p>Selected</p></div>
+                        <div id="seat-selected" class="flex"><img src="./images/seat-green-filled.png" alt="#"><p>Selected</p></div>
                     </div>
                     <hr class="pb-6">
 
@@ -212,7 +212,7 @@
 
                         <div class="flex gap-16">
                             <div class="grid grid-cols-2 rounded-xl gap-y-6 gap-x-8">
-                                <div onclick="seatSelected()" class="bg-[#F7F8F8] py-3 px-12 rounded-xl">A1</div>
+                                <div id="seat-left-now" onclick="seatSelected()" class="bg-[#F7F8F8] py-3 px-12 rounded-xl">A1</div>
                                 <div class="bg-[#F7F8F8] py-3 px-12 rounded-xl">A2</div>
                                 <div class="bg-[#F7F8F8] py-3 px-12 rounded-xl">B1</div>
                                 <div class="bg-[#F7F8F8] py-3 px-12 rounded-xl">B2</div>
