added a little bit of pricing funcitionality

--- a/index.html
+++ b/index.html
@@ -268,19 +268,19 @@
                     <div class="p-8 mb-6 mt-6 rounded-xl bg-[#F7F8F8] ">
                         <div class="flex justify-around pb-4 text-[#030712] inter text-base font-medium">
                             <p>Seat</p>
-                            <p>Seat</p>
+                            <p>Class</p>
                             <p>Price</p>
                         </div>
                         <hr class="">
                         <div class="flex justify-between pb-4 pt-4 text-gray-500">
-                            <p>C2</p>
+                            <p id="seat-num">null</p>
                             <p>Economy</p>
-                            <p>550</p>
+                            <p id="ticket-price">0</p>
                         </div>
                         <div class="flex justify-between pb-4 text-gray-500">
-                            <p>C2</p>
+                            <p>null</p>
                             <p>Economy</p>
-                            <p>550</p>
+                            <p>0</p>
                         </div>
                         <hr>
                         <div class="flex justify-between pb-4 pt-4 text-[#030712] inter text-base font-medium">
