--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                         <hr>
                         <div class="flex justify-between pb-4 pt-4 text-[#030712] inter text-base font-medium">
                             <h5>Total Price</h5>
-                            <p>BDT 1100</p>
+                            <p>BDT <span id="total-price">0</span></p>
                         </div>
                         <div class="pb-6">
                             <div class="absolute">
@@ -298,13 +298,15 @@
                         </div>
                 
                     </div>
-                    <h2 class="text-[#030712] inter text-base font-medium">Passenger Name*</h2>
-                    <input class="py-3 px-20 mb-5 border-[1px] rounded-xl border-gray-300" type="text" placeholder="Enter you name" required>
-                    <h2 class="text-[#030712] inter text-base font-medium">Phone Number*</h2>
-                    <input class="py-3 px-20 mb-5 border-[1px] rounded-xl border-gray-300" type="number" placeholder="Enter your phone number" required>
-                    <h2 class="text-[#030712] inter text-base font-medium">Email ID</h2>
-                    <input class="py-3 px-20 mb-5 border-[1px] rounded-xl border-gray-300" type="email" placeholder="Enter your email id"> <br>
-                    <button class="text-white raleway text-xl font-semibold px-[150px] py-3 bg-[#1DD100] rounded-2xl mb-6"><a target="_blank" href="./success.html">Next</a></button>
+                    <form>
+                        <h2 class="text-[#030712] inter text-base font-medium">Passenger Name*</h2>
+                        <input class="py-3 px-20 mb-5 border-[1px] rounded-xl border-gray-300" type="text" placeholder="Enter you name" required>
+                        <h2 class="text-[#030712] inter text-base font-medium">Phone Number*</h2>
+                        <input class="py-3 px-20 mb-5 border-[1px] rounded-xl border-gray-300" type="number" placeholder="Enter your phone number" required>
+                        <h2 class="text-[#030712] inter text-base font-medium">Email ID</h2>
+                        <input class="py-3 px-20 mb-5 border-[1px] rounded-xl border-gray-300" type="email" placeholder="Enter your email id"> <br>
+                        <button class="text-white raleway text-xl font-semibold px-[150px] py-3 bg-[#1DD100] rounded-2xl mb-6"><a target="_blank" href="./success.html">Next</a></button>
+                    </form>
                     <div class="flex justify-between text-gray-400">
                         <p class="underline"><a href="#">Terms and conditions</a></p>
                         <p class="underline"><a href="#">Cancellation Policy</a></p>
