last commit and added some pop up window message

--- a/index.html
+++ b/index.html
@@ -278,9 +278,9 @@
                             <p id="ticket-price">0</p>
                         </div>
                         <div class="flex justify-between pb-4 text-gray-500">
-                            <p>null</p>
+                            <p id="seat-num2">null</p>
                             <p>Economy</p>
-                            <p>0</p>
+                            <p id="ticket-price2">0</p>
                         </div>
                         <hr>
                         <div class="flex justify-between pb-4 pt-4 text-[#030712] inter text-base font-medium">
