--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme = 'corporate'>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,8 +15,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
-        <!-- tailwindcss cdn here  -->
-    <script src="https://cdn.tailwindcss.com"></script>
+        <!-- tailwindcss and daisi ui cdn here  -->
+        <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
+        <script src="https://cdn.tailwindcss.com"></script>
 
     <style>
         .raleway {
@@ -212,10 +213,10 @@
 
                         <div class="flex gap-16">
                             <div class="grid grid-cols-2 rounded-xl gap-y-6 gap-x-8">
-                                <div id="seat-left-now" onclick="seatSelected()" class="bg-[#F7F8F8] py-3 px-12 rounded-xl">A1</div>
-                                <div id="seat-left-now-a2" onclick="seatSelecteda2()" class="bg-[#F7F8F8] py-3 px-12 rounded-xl">A2</div>
-                                <div id="seat-left-now-b1" onclick="seatSelectedb1()" class="bg-[#F7F8F8] py-3 px-12 rounded-xl">B1</div>
-                                <div id="seat-left-now-b2" onclick="seatSelectedb2()" class="bg-[#F7F8F8] py-3 px-12 rounded-xl">B2</div>
+                                <div id="seat-A1" onclick="seatSelect('seat-A1')" class="bg-[#F7F8F8] py-3 px-12 rounded-xl select-none">A1</div>
+                                <div id="seat-A2" onclick="seatSelect('seat-A2')" class="bg-[#F7F8F8] py-3 px-12 rounded-xl select-none">A2</div>
+                                <div id="seat-B1" onclick="seatSelect('seat-B1')" class="bg-[#F7F8F8] py-3 px-12 rounded-xl select-none">B1</div>
+                                <div id="seat-B2" onclick="seatSelect('seat-B2')" class="bg-[#F7F8F8] py-3 px-12 rounded-xl select-none">B2</div>
                                 <div class="bg-[#F7F8F8] py-3 px-12 rounded-xl">C1</div>
                                 <div class="bg-[#F7F8F8] py-3 px-12 rounded-xl">C2</div>
                                 <div class="bg-[#F7F8F8] py-3 px-12 rounded-xl">D1</div>
@@ -235,10 +236,10 @@
                             </div>
     
                             <div class="grid grid-cols-2 gap-x-8 gap-y-6">
-                                <div id="seat-left-now-a3" onclick="seatSelecteda3()" class="bg-[#F7F8F8] py-3 px-12 rounded-xl">A3</div>
-                                <div id="seat-left-now-a4" onclick="seatSelecteda4()" class="bg-[#F7F8F8] py-3 px-12 rounded-xl">A4</div>
-                                <div id="seat-left-now-b3" onclick="seatSelectedb3()" class="bg-[#F7F8F8] py-3 px-12 rounded-xl">B3</div>
-                                <div id="seat-left-now-b4" onclick="seatSelectedb4()" class="bg-[#F7F8F8] py-3 px-12 rounded-xl">B4</div>
+                                <div id="seat-A3" onclick="seatSelect('seat-A3')" class="bg-[#F7F8F8] py-3 px-12 rounded-xl select-none">A3</div>
+                                <div id="seat-A4" onclick="seatSelect('seat-A4')" class="bg-[#F7F8F8] py-3 px-12 rounded-xl select-none">A4</div>
+                                <div id="seat-B3" onclick="seatSelect('seat-B3')" class="bg-[#F7F8F8] py-3 px-12 rounded-xl select-none">B3</div>
+                                <div id="seat-B4" onclick="seatSelect('seat-B4')" class="bg-[#F7F8F8] py-3 px-12 rounded-xl select-none">B4</div>
                                 <div class="bg-[#F7F8F8] py-3 px-12 rounded-xl">C3</div>
                                 <div class="bg-[#F7F8F8] py-3 px-12 rounded-xl">C4</div>
                                 <div class="bg-[#F7F8F8] py-3 px-12 rounded-xl">D3</div>
@@ -267,31 +268,38 @@
                     <hr>
                     <div class="p-8 mb-6 mt-6 rounded-xl bg-[#F7F8F8] ">
                         <div class="flex justify-around pb-4 text-[#030712] inter text-base font-medium">
-                            <p>Seat</p>
+                            <div class="flex gap-1 items-center"><p>Seat</p><p id="selectedSeatNum" class="flex items-center text-[13px] text-white rounded-[7px] bg-[#1DD100] px-3 h-4">0</p></div>
                             <p>Class</p>
                             <p>Price</p>
                         </div>
                         <hr class="">
                         <div class="flex justify-between pb-4 pt-4 text-gray-500">
-                            <p id="seat-num">null</p>
+                            <p id="seat-name"></p>
                             <p>Economy</p>
                             <p id="ticket-price">0</p>
                         </div>
                         <div class="flex justify-between pb-4 text-gray-500">
-                            <p id="seat-num2">null</p>
+                            <p id="seat-name2"></p>
                             <p>Economy</p>
-                            <p id="ticket-price2">0</p>
+                            <p id="ticket-price2">0</p> 
                         </div>
                         <hr>
                         <div class="flex justify-between pb-4 pt-4 text-[#030712] inter text-base font-medium">
                             <h5>Total Price</h5>
                             <p>BDT <span id="total-price">0</span></p>
                         </div>
-                        <div class="pb-6">
-                            <div class="absolute">
-                                <input id="coupon" disabled class="py-3 pl-[20px] pr-[80px] rounded-xl" type="text" placeholder="Have any coupon?" class=""> <button id="coupon-btn" disabled onclick="discount()" class="text-white inter text-base font-normal px-3 py-1 bg-[#1DD100] rounded-lg absolute right-3 top-2">Apply</button>
+                        <div id="discount-section" class="hidden">
+                            <div class="flex justify-between pb-4 text-[#030712] inter text-base font-medium">
+                                <h5>Discount Price</h5>
+                                <p>BDT <span id="discount-price">0</span></p>
                             </div>
                         </div>
+                        <div class="pb-6">
+                            <div class="absolute">
+                                <input id="coupon" disabled class="py-3 pl-[20px] pr-[80px] rounded-xl" type="text" placeholder="Have any coupon?" class=""> <button id="coupon-btn" disabled  class="text-white inter text-base font-normal px-3 py-1 bg-[#1DD100] rounded-lg absolute right-3 top-2">Apply</button>
+                            </div>
+                        </div>
+
                         <div class="flex justify-between sticky pt-11 text-[#030712] inter text-base font-medium">
                             <h5>Grand Total</h5>
                             <p>BDT <span id="grand-total">0</span></p>
@@ -300,12 +308,34 @@
                     </div>
                     <form>
                         <h2 class="text-[#030712] inter text-base font-medium">Passenger Name*</h2>
-                        <input class="py-3 px-20 mb-5 border-[1px] rounded-xl border-gray-300" type="text" placeholder="Enter you name" required>
+                        <input id="input-name" class="py-3 px-20 mb-5 border-[1px] rounded-xl border-gray-300" type="text" placeholder="Enter you name" required>
                         <h2 class=" text-[#030712] inter text-base font-medium">Phone Number*</h2>
-                        <input class="py-3 px-20 mb-5 border-[1px] rounded-xl border-gray-300" type="number" placeholder="Enter your phone number" required>
+                        <input id="input-number" class="py-3 px-20 mb-5 border-[1px] rounded-xl border-gray-300" type="number" placeholder="Enter your phone number" required>
                         <h2 class="text-[#030712] inter text-base font-medium">Email ID</h2>
                         <input class="py-3 px-20 mb-5 border-[1px] rounded-xl border-gray-300" type="email" placeholder="Enter your email id"> <br>
-                        <button  class=" text-white raleway text-xl font-semibold px-[150px] py-3 bg-[#1DD100] rounded-2xl mb-6"><a id="next-btn" target="_blank" class="pointer-events-none" href="./success.html">Next</a></button>
+
+                        <button class="btn px-[155px] text-white mb-4 rounded-lg bg-[#1DD100]" onclick="my_modal_4.showModal()">Next</button>
+                            <dialog id="my_modal_4" class="modal">
+                            <div class="modal-box w-11/12 max-w-5xl">
+                                <main class="bg-[#F2F1F1] h-screen rounded-[8px] flex justify-center items-center">
+                                    <div id="success-page" class=" bg-white px-20 pt-14 pb-12 rounded-2xl">
+                                        <div class="flex justify-center"><img src="./images/success.png" alt="#"></div>
+                                        <h5 class="text-[#27AE60] pt-9 pb-8 text-center roboto text-2xl font-semibold">SUCCESS</h5>
+                                        <p class="text-[#4A4A4A] text-center roboto text-xl font-medium">Thank you for Booking Our Bus Seats. 
+                                        We are working hard to find the best service and deals for you. </p>
+                                        <p class="text-[#4A4A4A] pt-3 pb-4 text-center roboto text-xl font-light">Shortly you will find a confirmation in your email.</p>
+                                        <div class="flex justify-center"><button class="text-white px-20 py-4 roboto text-xl font-medium bg-[#27AE60] rounded-[32px]"><a href="index.html" target="_blank">Continue</a></button></div>
+                                    </div>
+                                </main>
+                                <div class="modal-action">
+                                <form method="dialog">
+                                    <!-- if there is a button, it will close the modal -->
+                                    <button class="btn">Esc</button>
+                                </form>
+                                </div>
+                            </div>
+                            </dialog>
+                        <!-- <button  class=" text-white raleway text-xl font-semibold px-[150px] py-3 bg-[#1DD100] rounded-2xl mb-6"><a id="next-btn" target="_blank" class="pointer-events-none" href="./success.html">Next</a></button> -->
                     </form>
                     <div class="flex justify-between text-gray-400">
                         <p class="underline"><a href="#">Terms and conditions</a></p>
